# ocean

./: .gitignore  CMakeLists.txt  main
include/Analysis/: MarketPhase.hpp  MarketPhaseDetector.hpp
include/Clients/: BinanceClient.hpp  BinanceWSClient.hpp
include/Core/: IMarketDataSource.hpp  MarketData.hpp  OrderBook.hpp
include/Detectors/: MarketPhaseDetector.hpp
include/Risk/: RiskManager.hpp
include/Strategy/: LiquidityDetector.hpp  LiquidityRaidDetector.hpp
include/Tactics/: SunTzuTactics.hpp
include/Utils/: ILogger.hpp  QuestDBLogger.hpp  TimeLogger.hpp
src/: main.cpp
src/Analysis/: MarketPhaseDetector.cpp
src/Clients/: BinanceClient.cpp  BinanceWSClient.cpp  TestBinanceConnectivity.cpp
src/Core/: MarketData.cpp  OrderBook.cpp
src/Detectors/: MarketPhaseDetector.cpp
src/Risk/: RiskManager.cpp
src/Strategy/: LiquidityDetector.cpp  LiquidityRaidDetector.cpp
src/Tactics/: SunTzuTactics.cpp
src/Utils/: QuestDBLogger.cpp
tests/: BinanceClientTest.cpp  TestLiquidityDetector.cpp  TestQuestDBLogger.cpp
